# jlib

./: .gitignore
cExamples/: funcPointer.c  output
code/drone/: coaxialDroneDynamics.py  opengl.drawio
code/dsp/: dft.py  plotManager.py  wave.py  waveManager.py
code/estimation/: 1_highOrderJ.py  2_lowOrderJ.py  leastSquares.py
code/maths/: exponential.py
code/pf/: CMakeLists.txt  main.cpp
code/pf/bot/: Bot.cpp  Bot.h  Bot.hpp  CMakeLists.txt
code/pf/include/: angleConversion.h  coord.hpp  line.h  point.h
code/pf/map/: CMakeLists.txt  Map.cpp  Map.h  Map.hpp
code/pf/matrix/: Matrix.cpp  Matrix.h
code/pf/plotter/: CMakeLists.txt  Plotter.cpp  Plotter.h  Plotter.hpp
code/pf/scanner/: Scanner.h
code/pygame/: animationManager.py  cart.py  cartpole.py  colour.py  dcMotor.py  main.py  pole.py  test2.py  timeManager.py
code/sim/: .bazelrc  MODULE.bazel
code/sim/helloWorld/: BUILD.bazel  simple_continuous_time_system.cc
code/sim/pendulum/: BUILD.bazel  passive_simulation.cc  pendulum_geometry.cc  pendulum_input.cc  pendulum_input.h  pendulum_params.cc  pendulum_plant.cc  pendulum_plant.h  pendulum_state.cc
code/simplePendulum/: animator.py  main.py  pendulum.py  plotter.py  rk4.py  temp.py  test.py  testOpengl.cpp  timing.py
cpp/examples/copyMove/: finalClass.cpp
cpp/examples/fundamentals/: 12_friend_1.cpp  15_2_operatorOverloading.cpp  15_operatorOverloading.cpp  16_overriding.cpp  18_functionPointer.cpp  19_defaultFuncArgs.cpp  20b_raii.cpp  21b_unique_pointer.cpp  22a_shared_pointer.cpp  22b_shared_pointer.cpp  22c_shared_pointer.cpp  25_returnByRef.cpp  2_private.cpp  4_invariants.cpp  5_trivialGetterSetter.cpp  7_namespace.cpp  9_classTemplate.cpp
cppExamples/: control.cpp  output
cppExamples/fundamentals/: 0_memberInitialisation.cpp  10_inheritance.cpp  11_inheritedAccessSpecifiers.cpp  13_virtualFunction.cpp  14_functionOverloading.cpp  16_overriding.cpp  17_mallocVsNew.cpp  1_public.cpp  20_raii.cpp  21_unique_pointer.cpp  23a_weak_pointer.cpp  23b_weak_pointer.cpp  24_pointer_conversion.cpp  2_private.cpp  3_protectedMembers.cpp  5_trivialGetterSetter.cpp  6_constructors.cpp  8_templateFunction.cpp  output
docs/: estimationExamples.html  jlibDocumentation.html  leastSquaresEstimation.html  main.html  pyExamples.html
docs/estimation/: batchlls.html
docs/estimation/ls/: batchHigherOrderJ.html  batchLowerOrderJ.html  leastSquaresEstimation.html  main.html
docs/maths/: exponential.html
drone/averaging/: Averaging-Student.py  CoaxialDrone.py  DronewithPIDControllerParameters.py  Sensor.py
drone/coaxial/ema/: CoaxialDrone.py  EMAEstimator.py  Logger.py  PIDController.py  Plotter.py  Sensor.py  Simulation.py  main.py
drone/coaxial/kf/: CoaxialDrone.py  DronewithPIDControllerKF.py  KF.py  Plotter.py  StateSpaceDisplay.py  main.py  pathGenerator.py
drone/coaxial/temp/15/: Kalman_Filter-Solution.html  Kalman_Filter-Student.py
drone/coaxial/temp/17/: 17.html  EKF-Solution.html  Sympy Demonstration.py
drone/coaxial/temp/20/: EKF-Solution.html  Sympy Demonstration.html
drone/coaxial/temp/3d/13/: Drone_in_3D-Solution.html  Drone_in_3D-Solution.py
drone/coaxial/temp/3d/18/: UKF-Solution.html  UKF-Solution.py
drone/coaxial/temp/3d/8/: Attitude estimation-Solution-Revised.html  Attitude estimation-Solution-Revised.py  Attitude estimation-Solution.html  Attitude estimation-Solution.py
pyexamples/estimation/: 2dGaussianPlay.py  BUILD  covarianceTest.py  estimateResUsingRLS.py  estimateResistanceUsingLS.py  leastSquares.py  uniformDist.py
python/estimation/: estimateResUsingRLS.py
python/filter/ema/: ema.py  main.py
