package(default_visibility = ["//visibility:private"])

load("@drake//tools/install:install_data.bzl", "install_data")
load("@drake//tools/skylark:drake_data.bzl", "models_filegroup")

models_filegroup(
    name = "models",
    visibility = ["//visibility:public"],
)

install_data(
    name = "install_data",
    data = [":models"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pendulum_vector_types",
    srcs = [
        "pendulum_input.cc",
        "pendulum_params.cc",
        "pendulum_state.cc",
    ],
    hdrs = [
        "pendulum_input.h",
        "pendulum_params.h",
        "pendulum_state.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@drake//common:dummy_value",
        "@drake//common:essential",
        "@drake//common:name_value",
        "@drake//common/symbolic:expression",
        "@drake//systems/framework:vector",
    ],
)

cc_library(
    name = "pendulum_plant",
    srcs = ["pendulum_plant.cc"],
    hdrs = ["pendulum_plant.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pendulum_vector_types",
        "@drake//systems/framework:leaf_system",
    ],
)

cc_library(
    name = "pendulum_geometry",
    srcs = ["pendulum_geometry.cc"],
    hdrs = ["pendulum_geometry.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":pendulum_plant",
        ":pendulum_vector_types",
        "@drake//geometry:geometry_roles",
        "@drake//geometry:scene_graph",
        "@drake//math:geometric_transform",
        "@drake//systems/framework:diagram_builder",
        "@drake//systems/framework:leaf_system",
    ],
)

cc_binary(
    name = "passive_simulation",
    srcs = ["passive_simulation.cc"],
    data = [":models"],
    deps = [
        ":pendulum_geometry",
        ":pendulum_plant",
        "@drake//geometry:meshcat_visualizer",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework:diagram",
        "@drake//systems/primitives:constant_vector_source",
    ],
)
